--- a/app/code/Elsherif/Bosta/view/adminhtml/layout/sales_order_view.xml
+++ b/app/code/Elsherif/Bosta/view/adminhtml/layout/sales_order_view.xml
@@ -2,14 +2,16 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceBlock name="order_tab">
+        <referenceContainer name="order_additional_info">
             <block class="Elsherif\Bosta\Block\Adminhtml\Order\View\Tab\Bosta"
-                   name="order_tab_bosta"
-                   template="Elsherif_Bosta::order/view/tab/bosta.phtml">
+                   name="order_bosta_delivery"
+                   template="Elsherif_Bosta::order/view/tab/bosta.phtml"
+                   group="bosta"
+                   after="-">
                 <arguments>
-                    <argument name="tab_label" xsi:type="string">Bosta Delivery</argument>
+                    <argument name="sort_order" xsi:type="string">100</argument>
                 </arguments>
             </block>
-        </referenceBlock>
+        </referenceContainer>
     </body>
 </page>
